<resources>
    <string name="app_name">Contact Us</string>

    <!-- Admob -->
    <string name="admob_unit_id">ca-app-pub-4541063798492496~6134709371</string>
    <string name="admob_app_open_ad_unit_id">ca-app-pub-4541063798492496/9654888656</string>
    <string name="admob_banner_ad_unit_id">ca-app-pub-4541063798492496/3093349734</string>

    <string name="internet_connection_issues">Internet Connection no found. Try again later.</string>
    <string name="splash_activity_text" translatable="false">CONTACT US</string>

    <!-- Contact list -->
    <string name="contacts_title">Contacts</string>
    <string name="search_contacts">Search contacts</string>
    <plurals name="contacts_count">
        <item quantity="one">%1$d contact</item>
        <item quantity="other">%1$d contacts</item>
    </plurals>
    <string name="cd_backup">Backup</string>
    <string name="cd_sync">Sync</string>
    <string name="cd_privacy_options">Privacy options</string>
    <string name="new_contact_fab">New contact</string>
    <string name="empty_contacts">No contacts</string>
    <string name="empty_contacts_hint">Contacts you add will appear here.</string>
    <string name="empty_contacts_cta">Add contact</string>
    <string name="no_results">No results</string>
    <plurals name="import_added">
        <item quantity="one">%1$d contact added</item>
        <item quantity="other">%1$d contacts added</item>
    </plurals>
    <string name="import_up_to_date">Already up to date</string>

    <!-- Edit contact -->
    <string name="new_contact">New contact</string>
    <string name="edit_contact">Edit contact</string>

    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="main_information">Main Information</string>
    <string name="sub_information">Sub Information</string>
    <string name="first_name">First Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="last_name">Last Name</string>
    <string name="skip"><![CDATA[Skip >>>]]></string>

    <string name="contact_first_name_empty">First Name cannot be Empty.</string>
    <string name="contact_last_name_empty">Last Name cannot be Empty.</string>
    <string name="contact_email_invalid">Email is invalid.</string>
    <string name="contact_update_success">Contact updated.</string>
    <string name="contact_added_success">Contact added.</string>
    <string name="contact_deleted">Contact deleted.</string>
    <string name="contact_not_found">That contact no longer exists.</string>
    <string name="delete">Delete</string>
    <string name="delete_contact">Delete contact</string>
    <string name="delete_contact_confirm">This contact will be removed from this device. This cannot be undone.</string>
</resources>